Revelation changelog

---------------[ xxxx-xx-xx : 0.4.0 ]---------------

2005-01-01  Erik Grinaker <erikg@codepoet.no>

	* don't subclass gnome.ui.HRef (abstract widget from
	gnome-python 2.9.x - subclassing causes crash)


2005-01-01  Erik Grinaker <erikg@codepoet.no>

	* renamed Makefile test target to check


2004-12-31  Erik Grinaker <erikg@codepoet.no>

	* updated the data module unit tests with new API


2004-12-21  Erik Grinaker <erikg@codepoet.no>

	* improved the main app class API


2004-12-17  Erik Grinaker <erikg@codepoet.no>

	* added clipboard chaining

	* added menu item for copying username and password chain
	to clipboard

	* removed option for copying username to PRIMARY on launch


2004-12-16  Erik Grinaker <erikg@codepoet.no>

	* used generic INSTALL instructions from automake


2004-12-15  Erik Grinaker <erikg@codepoet.no>

	* added a preference for launching entries on doubleclick

	* added a preference for copying username to PRIMARY selection
	when launching an entry

	* added gnome session manager support

	* gtk/gnome arguments are properly handled


2004-12-14  Erik Grinaker <erikg@codepoet.no>

	* all entry editing widgets activates default dialog response

	* set default response for filechooser dialogs

	* display tooltips wherever relevant

	* wrapped and used gnome_authentication_manager_init()


2004-12-13  Erik Grinaker <erikg@codepoet.no>

	* added support for drag and drop of entries in tree

	* added dynamic menu items for copying username/password to
	clipboard


2004-12-10  Erik Grinaker <erikg@codepoet.no>

	* rewrote the application code, as well as the dialog and u
	modules

	* the entry clipboard is shared between revelation instances

	* wrote unit tests for new clipboard classes, and updated unit
	tests for config module

	* added a mimetype and icon for Revelation data files

	* files can be dragged to Revelation to open them

	* check file format before asking for password
