@@ -24,6 +24,7 @@ Bugfixes:
 - quit works correctly after continuing from an unhandled error
 - gtk/gnome command-line arguments are handled correctly
 - don't subclass gnome.ui.HRef (abstract widget from gnome-python 2.9.x)
+- fall back to False for GNOME toolbar_detachable setting
 
 Code changes:
 - rewrote and cleaned up all code
