@@ -7,6 +7,8 @@ Revelation changelog
 	* don't subclass gnome.ui.HRef (abstract widget from
 	gnome-python 2.9.x - subclassing causes crash)
 
+	* fall back to False for toolbar_detachable setting from GNOME
+
 
 2005-01-01  Erik Grinaker <erikg@codepoet.no>
 
